--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,25 +1,48 @@
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Carousel</a>
+      <a class="navbar-brand" href="#">Dating App</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" aria-current="page" href="#">Matches</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Lists</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <a class="nav-link" >Messages</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"  (click)="logout()">Logout</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+
+       <div class="dropdown" *ngIf="loggedIn" dropdown>
+
+        <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome User</a>
+       <div class="dropdown-menu" *dropdownMenu>
+       <a class="dropdown-item">Edit Profile</a>
+       <a class="dropdown-item"  (click)="logout()" >Logout</a>
+      </div>
+
+      </div>
+
+
+
+
+        <form *ngIf="!loggedIn"  #loginForm="ngForm" class="d-flex" (ngSubmit)="login()"
+        autocomplete="off">
+          <input         
+          name="username" [(ngModel)]="model.username" 
+          class="form-control me-2" type="text" placeholder="Username" aria-label="Search">
+          <input 
+          name="password" [(ngModel)]="model.password" 
+          class="form-control me-2" type="password" placeholder="Password" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Login</button>
         </form>
       </div>
     </div>
