--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -10,7 +10,7 @@
  placeholder="Username"
  >    
 </div>
-<div class="mb-3">
+<!-- <div class="mb-3">
 <label >Who is your favourite user?</label>
 <select class="form-select">
 <option *ngFor="let user of usersFromHomeComponent" [value]="user.userName">
@@ -19,7 +19,7 @@
 </option>
 
 </select>
-</div>
+</div> -->
 
 
 <div class="mb-3">
