--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,9 +1,10 @@
 
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
       <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
   
         <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$|async" >
+         <ng-container>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLink="/members" routerLinkActive="active">Matches</a>
           </li>
@@ -16,11 +17,14 @@
           <li class="nav-item">
             <a class="nav-link"  (click)="logout()">Logout</a>
           </li>
+
+         </ng-container>
+       
         </ul>
 
-       <div class="dropdown" *ngIf="accountService.currentUser$|async" dropdown>
+        <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+          <a class="dropdown-toggle text-light text-decoration-none ms-2" dropdownToggle>Welcome {{user.userName}}</a>
 
-        <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome User</a>
        <div class="dropdown-menu" *dropdownMenu>
        <a class="dropdown-item">Edit Profile</a>
        <a class="dropdown-item"  (click)="logout()" >Logout</a>
@@ -39,7 +43,7 @@
           <input 
           name="password" [(ngModel)]="model.password" 
           class="form-control me-2" type="password" placeholder="Password" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Login</button>
+          <button class="btn btn-success" type="submit">Login</button>
         </form>
     
     </div>
