--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -29,7 +29,7 @@
           <a class="dropdown-toggle text-light text-decoration-none ms-2" dropdownToggle>Welcome {{user.userName}}</a>
 
        <div class="dropdown-menu" *dropdownMenu>
-       <a class="dropdown-item" routerLink="/members/edit">Edit Profile</a>
+        <a routerLink="/member/edit" class="dropdown-item">Edit Profile</a>
        <a class="dropdown-item"  (click)="logout()" >Logout</a>
       </div>
 
