--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -42,7 +42,7 @@
     <div class="col-8">
         <tabset class="member-tabset">
             <tab heading="About {{member.knownAs}}">
-                <form #editForm="ngForm" id="editForm"  (ngSubmit)="updateMember()">
+                <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
                     <h4 class="mt-2">Description</h4>
                     <textarea class="form-control" [(ngModel)]="member.introduction" name="introduction" rows="6"></textarea>
                     <h4 class="mt-2">Looking for</h4>
@@ -59,9 +59,9 @@
                 </form>
 
             </tab>
-            <!-- <tab heading="Edit Photos">
-                <app-photo-editor [member]="member"></app-photo-editor>
-            </tab> -->
+            <tab heading="Edit Photos">
+                <!-- <app-photo-editor [member]="member"></app-photo-editor> -->
+            </tab>
         </tabset>
     </div>
 </div>
