--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -9,8 +9,10 @@
     </div>
     <div class="col-4">
         <div class="card">
-            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
+            <img  alt="{{member.knownAs}}"
                 class="card-img-top img-thumbnail">
+                <!-- <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
+                class="card-img-top img-thumbnail"> -->
             <div class="card-body">
                 <div>
                     <strong>Location:</strong>
