--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -14,7 +14,7 @@ type="text"
  
 </div>
 
-<div class="mb-3">
+<!-- <div class="mb-3">
     <input type="password"
      class="form-control"
      [class.is-invalid]="registerForm.get('password')?.errors&& registerForm.get('password')?.touched"
@@ -24,7 +24,7 @@ type="text"
      <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('required')">Please enter a password</div>  
      <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('minlength')">Please must be atleast 4 character</div>  
      <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('maxlength')">Please must at be most 8 character</div>  
-    </div>
+    </div> -->
 
     <div class="mb-3">
         <input type="password"
