--- a/client/src/app/_forms/text-input/text-input.component.html
+++ b/client/src/app/_forms/text-input/text-input.component.html
@@ -1,11 +1,23 @@
-<!-- <div class="mb-3">
-    <input type={{type}}
-     class="form-control"
-     [class.is-invalid]="ngControl.touched&&ngControl.invalid"
-     [formControl]="control" 
-     placeholder={{label}}
-     > 
-     <div class="invalid-feedback" *ngIf="control.errors?.['required']">Please enter a password</div>  
-     <div class="invalid-feedback" *ngIf="control.errors?.['minlength']">Please must be atleast 4 character</div>  
-     <div class="invalid-feedback" *ngIf="control.errors?.[]'password')?.hasError('maxlength')">Please must at be most 8 character</div>  
-    </div> -->
+<div class="mb-3 form-floating">
+    <input 
+      [class.is-invalid]="control.touched && control.invalid"
+      [type]="type"
+      class="form-control"
+      [formControl]="control"
+      [placeholder]="label"
+    >
+    <label>{{ label }}</label>
+    <div *ngIf="control.hasError('required')" class="invalid-feedback text-start">
+      Please enter a {{ label }}
+    </div>
+    <div *ngIf="control.hasError('minlength')" class="invalid-feedback text-start">
+      {{ label }} must be at least {{ control.errors?.['minlength'].requiredLength }} characters
+    </div>
+    <div *ngIf="control.hasError('maxlength')" class="invalid-feedback text-start">
+      {{ label }} must be at most {{ control.errors?.['maxlength'].requiredLength }} characters
+    </div>
+    <div *ngIf="control.hasError('isMatching')" class="invalid-feedback text-start">
+      Passwords do not match
+    </div>
+  </div>
+  
