--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,50 +1,34 @@
-<form  [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
-<h2 class="text-center text-primary">Sign up</h2>
-
-<hr>
-<div class="mb-3">
-<input 
-type="text"
-[class.is-invalid]="registerForm.get('username')?.errors&& registerForm.get('username')?.touched"
- class="form-control"
- formControlName="username"
- placeholder="Username" 
- >   
- <div class="invalid-feedback">Please enter a username</div>  
- 
-</div>
-
-<!-- <div class="mb-3">
-    <input type="password"
-     class="form-control"
-     [class.is-invalid]="registerForm.get('password')?.errors&& registerForm.get('password')?.touched"
-     formControlName="password"      
-     placeholder="Password"
-     > 
-     <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('required')">Please enter a password</div>  
-     <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('minlength')">Please must be atleast 4 character</div>  
-     <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('maxlength')">Please must at be most 8 character</div>  
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
+    <h2 class="text-center text-primary">Sign up</h2>
+    <hr>
+  
+    <!-- <div class="mb-3">
+      <label style="margin-right: 10px;">I am a: </label>
+      <label class="form-check-label">
+        <input type="radio" class="form-check-input" value="male" formControlName="gender"> Male
+      </label>
+      <label class="form-check-label">
+        <input type="radio" class="form-check-input" value="female" formControlName="gender"> Female
+      </label>
     </div> -->
-
-    <div class="mb-3">
-        <input type="password"
-         class="form-control"
-         [class.is-invalid]="registerForm.get('confirmPassword')?.errors&& registerForm.get('confirmPassword')?.touched"
-         formControlName="confirmPassword"         
-         placeholder="Confirm Password"
-         >   
-         <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('required')">Please enter a confirm password</div>  
-         <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('notMatch')">Confirm password must match password</div>
-
-        </div>
-        <div class="invalid-feedback">Confirm password is wrong</div>  
-    <div class="text-center">
-        <button class="btn btn-success me-2" type="submit">Register</button>
-        <button class="btn btn-default" type="button"  (click)="cancel()">Cancel</button>
+  
+    <app-text-input [formControl]="$any(registerForm.controls['username'])" 
+      [label]="'Username'">
+    </app-text-input>
+  
+ 
+    <app-text-input [formControl]="$any(registerForm.controls['password'])" 
+      [label]="'Password'"
+      [type]="'password'">
+    </app-text-input>
+  
+    <app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])" 
+      [label]="'Confirm password'"
+      [type]="'password'">
+    </app-text-input>
+  
+    <div class="form-group text-center">
+      <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Register</button>
+      <button class="btn btn-default me-2" (click)="cancel()" type="button">Cancel</button>
     </div>
-</form>
-
-<p>
-    Form  Value :{{registerForm.value|json}}
-    Form  Status :{{registerForm.status|json}}
-</p>
+  </form>
