--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -20,9 +20,9 @@
     [label]="'Known as'">
     </app-text-input>
   
-    <!-- <app-date-picker [formControl]="$any(registerForm.controls['dateOfBirth'])" 
-    [label]="'Date of birth'" [maxDate]="maxDate">
-    </app-date-picker> -->
+    <app-date-picker [formControl]="$any(registerForm.controls['dateOfBirth'])" 
+    [label]="'Date of birth'"  [maxDate]="maxDate">
+    </app-date-picker>
   
     <app-text-input [formControl]="$any(registerForm.controls['city'])" 
     [label]="'City'">
