--- a/clients/client/src/app/app.html
+++ b/clients/client/src/app/app.html
@@ -1,13 +1,16 @@
 <app-nav></app-nav>
-<app-home></app-home>
+
+<!-- Pass members() value to the child component -->
+<app-home [membersFromApp]="members()"></app-home>
+
 <!--<div class="card bg-base-100 w-1/2 mx-auto p-10 mt-24 shadow-xl">
   <h3 class="text-3xl text-red-500">{{ title }}</h3>
   <ng-container *ngIf="members() !== null; else loadingTpl">
     <ul>
       @for (member of members()!; track member.id) {
       <li>-->
-        <!-- <img *ngIf="member.photoUrl" [src]="member.photoUrl" width="50" height="50" alt="Photo" />-->
-        <!--<div><strong>{{ member.userName }}</strong> ({{ member.age }} years)</div>
+<!-- <img *ngIf="member.photoUrl" [src]="member.photoUrl" width="50" height="50" alt="Photo" />-->
+<!--<div><strong>{{ member.userName }}</strong> ({{ member.age }} years)</div>
         <div>{{ member.city }}, {{ member.country }}</div>
       </li>
       }
@@ -19,5 +22,4 @@
 <ng-template #loadingTpl>
   <p>Loading members...</p>
 </ng-template>-->
-
 <!--<router-outlet></router-outlet>-->
